--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>PORTFOLIO</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <h2>ZeN_gE</h2>
+            <div class="div-item">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Works</a>
+                <a href="#">Clients</a>
+                <a href="#">Contact</a>
+            </div>
+        </nav>
+        <div class="head-item">
+            <h1 class="h1-item">Welcome to ZeN_gE</h1>
+            <p>We are a creative group of people who design influential brands and digital experiences.</p>
+        </div>
+        <button class="button-item">Start a Project</button>
+        
+    </header>
+    <section>
+        <div>
+<h3>Hi There!</h3>
+ <h2>I am Zenge, A web Developer.</h2>
+ <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</p>
+        </div>
+    </section>
     
 </body>
 </html>
